--- a/package.json
+++ b/package.json
@@ -13,15 +13,20 @@
   "license": "ISC",
   "dependencies": {
     "babel-cli": "^6.26.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.7.0",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.4",
     "express": "^4.16.3",
     "http-status-codes": "^1.3.0",
     "joi": "^13.4.0",
+    "jsonwebtoken": "^8.3.0",
     "mongoose": "^5.1.4",
     "mongoose-paginate": "^5.0.3",
     "morgan": "^1.9.0",
     "nodemon": "^1.17.5",
+    "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0",
     "swagger-ui-express": "^3.0.9"
   },
   "devDependencies": {
