--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.4",
     "express": "^4.16.3",
+    "express-session": "^1.15.6",
     "http-status-codes": "^1.3.0",
     "joi": "^13.4.0",
     "jsonwebtoken": "^8.3.0",
@@ -26,6 +27,7 @@
     "morgan": "^1.9.0",
     "nodemon": "^1.17.5",
     "passport": "^0.4.0",
+    "passport-google-oauth": "^1.0.0",
     "passport-jwt": "^4.0.0",
     "swagger-ui-express": "^3.0.9"
   },
