--- a/package.json
+++ b/package.json
@@ -19,17 +19,20 @@
     "cors": "^2.8.4",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
+    "html-to-text": "^4.0.0",
     "http-status-codes": "^1.3.0",
     "joi": "^13.4.0",
     "jsonwebtoken": "^8.3.0",
     "mongoose": "^5.1.4",
     "mongoose-paginate": "^5.0.3",
     "morgan": "^1.9.0",
+    "nodemailer": "^4.6.6",
     "nodemon": "^1.17.5",
     "passport": "^0.4.0",
     "passport-google-oauth": "^1.0.0",
     "passport-jwt": "^4.0.0",
     "passport-twitter": "^1.0.4",
+    "s": "^0.1.1",
     "swagger-ui-express": "^3.0.9"
   },
   "devDependencies": {
